Node Revision Delete 7.x-2.7, 2017-05-24
----------------------------------------
Changes since 7.x-2.6:

- #2881168 by adriancid: Create the CHANGELOG.txt file.
- #2867883 by adriancid: Delete the custom variables related to content types if
  they really exists.
- #2865907 by adriancid, dhwani.addweb: Use the README.txt template.
- #2869563 by adriancid: Once the content type is deleted the variables remains
  in the database.
- #2333555 by kalabro: PostgreSQL PDOException in
  node_revision_delete_candidates().
- #2866086 by adriancid, krina.addweb: Fix code standard format.
- #2869206 by adriancid: Add a destination to the edit link in the module
  configuration page.
- #2866092 by adriancid: Unused variable.
- #2869163 by adriancid, rodrigoac: Improve the table header in the
  Node Revision Delete Administration Page.
- #2869096 by adriancid, rodrigoac: Improve the permission title and 
  description.
- #2867877 by adriancid, rodrigoac: Delete the node_revision_delete_cron config
  variable when the module is uninstalled.
- #2248657 by vbouchet: Implements hook_workbench_moderation_transition.
- #2257257 by jeremyclassic, vbouchet: List tracked content types at admin page.
- by juampy: Validate arguments at Drush command.
- by juampy: Remove unused option --show-deleted.

Node Revision Delete 7.x-2.6, 2014-09-01
----------------------------------------
Changes since 7.x-2.5:

- by juampy: Fix bug when reporting final results.

Node Revision Delete 7.x-2.5, 2014-09-01
----------------------------------------
Changes since 7.x-2.4:

- by juampy: Fixed admin menu title and description.
- #2291177 by vbouchet: Use core #element_validate instead of custom function.
- #2295945 by jeremyclassic, alvar0hurtad0: Fixed Storing unused values in batch
  process causes poor performance and drush command crash.
- #2283549 by alvar0hurtad0, jeremyclassic: Make sure module meets coding
  standards.
- #1891050 by hanoii, iMiksu, jeremyclassic, juampy: Integrate with Batch API.