@@ -449,3 +449,18 @@ function _node_revision_delete_delete_content_type_config($content_type) {
   }
   return FALSE;
 }
+
+/**
+ * Implements hook_js_alter().
+ */
+function node_revision_delete_js_alter(&$javascript) {
+  // Deleting the library because we have our own version.
+  // Maybe this cannot be longer needed once https://www.drupal.org/node/2871619
+  // will be fixed.
+  // Getting the core js file.
+  $core_file = (drupal_get_path('module', 'node') . '/content_types.js');
+  // Getting the module js file.
+  $module_file = drupal_get_path('module', 'node_revision_delete') . '/js/content_types.js';
+  // Overwriting the file.
+  $javascript[$core_file] = drupal_js_defaults($module_file);
+}
