@@ -2,6 +2,8 @@ Node Revision Delete 7.x-2.7, 2017-05-24
 ----------------------------------------
 Changes since 7.x-2.6:
 
+- #2871238 by adriancid: Add the 'Limit the amount of revisions for this content
+  type' option in the Publishing option vertical tab.
 - #2881168 by adriancid: Create the CHANGELOG.txt file.
 - #2867883 by adriancid: Delete the custom variables related to content types if
   they really exists.
